# Pipeline_Python

teste_DataLake/: Jenkinsfile  README.md  docker-compose.yml  main.py  metadata.yaml  pyproject.toml  test_main.py
teste_Python/: Jenkinsfile  test_math_utils.py
